--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery.inputfilter",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "jQuery plugin for adding filters to forms input and textarea, like numeric input only.",
   "main": "index.js",
   "repository": {
@@ -8,12 +8,36 @@
     "url": "git+https://github.com/ZaifSenpai/jquery.inputfilter.git"
   },
   "author": "Zaif Senpai",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ZaifSenpai/jquery.inputfilter/issues"
   },
   "homepage": "https://github.com/ZaifSenpai/jquery.inputfilter#readme",
   "dependencies": {
     "jquery": "^3.4.1"
-  }
+  },
+  "keywords": [
+    "jquery",
+    "input",
+    "filter",
+    "numeric",
+    "alphanumeric",
+    "alpha",
+    "float",
+    "integer",
+    "decimal",
+    "maxlength",
+    "custom filter",
+    "regex",
+    "pattern",
+    "inputfilter",
+    "input-filter",
+    "input filter",
+    "inputfilter.js",
+    "input-filter.js",
+    "input filter.js",
+    "inputfilter.min.js",
+    "input-filter.min.js",
+    "input filter.min.js"
+  ]
 }
